* Created new theme element, and convenience functions, to enable or disable the parsing of text objects into expressions using latex markup. Previously, the parsing was done by default, however now, they are rendered without parsing unless the user states that they wish it to be parsed via the 'tern.plot.latex' theme element, or theme_latex() convenience functions.

ggtern 2.1.4
----------------------------------------------------------------
* Create grid_mesh convenience function
* Created getLabels function to better handle the creation of the ternary labels, from the known breaks. Have set the earliest label to empty (ie ""), so it doesn't interfere with the axis titles, particularly if the axis titles and first label are wide (ie something like "Top Species" and "50.%" respectively). This is not generally a problem for the default plot where the axis titles and first label are trivial (ie something like "T" and "0")
* Added Some Basic Demo's under /demo
* Minor fixes to themes
* Reviewed the geom_mask, removing two of the hidden layers, as they are now unnessessary
* Moved seq.tlr to coord proto member
* Included find_subclass to also now include coord
* Added a debug option to highlight what is going on with clipping mask

ggtern 2.1.3
----------------------------------------------------------------
* Reverted Method arguments in geom_interpolate_tern, errors being raised when 'auto' set as
* Completely reworked the theme inheritence tree, and theme construction methods, including a base 'dummy' theme (theme_ggtern, which appends and includes all the additional theme elements to the default ggplot2 theme.
* Removed the root theme elements for ggtern, in favour of inheriting from ggplot2
* Swapped the theme elements, tern.plot.background and tern.panel.background to be more in-line with the corresponding
plot.background and panel.background in the parent package.
* Provided ggtern version for the 'annotate' function